--- a/index.html
+++ b/index.html
@@ -91,19 +91,23 @@
   </div>
 
   <script>
+    // to append add values in the display
     function appendValue(value) {
       document.getElementById("result").value += value;
     }
 
+    // to clear the display
     function clearResult() {
       document.getElementById("result").value = "";
     }
 
+    // to remove the value
     function deleteChar() {
       let current = document.getElementById("result").value;
       document.getElementById("result").value = current.slice(0, -1);
     }
 
+    // check for the operator and based on that send the request to backend for the operation
     function calculate() {
       let input = document.getElementById("result").value;
 
